# Reaktor

./: .gitignore  README.md  gradle.properties  package.json  react-native.config.js  settings.gradle.kts
core/: README.md  build.gradle.kts  core.podspec
core/commonMain/adapters/: FileAdapter.kt  PermissionAdapter.kt  StorageAdapter.kt
core/commonMain/di/: Injector.kt  OnceInit.kt  koinHelpers.kt
core/commonMain/framework/: Adapter.kt  Component.kt  Feature.kt  (+7 more)
cpp/: Base.cpp  Base.h  CMakeLists.txt  JSIInstaller.h  Reaktor.cpp  Reaktor.h  ReaktorHostObject.h  cpp.podspec
cpp/darwin/: DarwinInstaller.h  DarwinInvoker.h  DarwinInvoker.mm
cpp/droid/: AndroidInvoker.cpp  AndroidInvoker.h  Installer.h  Invoker.cpp  JNIConverter.cpp  JNIConverter.h  Main.cpp
cpp/droid/bindings/: Functions.h  JHashMap.cpp  JHashMap.h
cpp/framework/: Base.h  Converter.h  Invoker.h  PlatformConverter.h  PlatformInvoker.h  README.md
cpp/modules/: MehmaanConfig.h  NetworkModule.h
cpp/types/: Async.h  Types.cpp  Types.h
generator/: build.gradle.kts
lib-db/: build.gradle.kts  lib_db.podspec  package.json
lib-design/: README.md  build.gradle.kts  lib_design.podspec  package.json
lib-design/reactMain/: index.tsx
lib-jsi/: build.gradle.kts  lib_jsi.podspec  package.json
lib-jsi/reactMain/: index.tsx
lib-mobile/: README.md  build.gradle.kts  lib_mobile.podspec
lib-mobile/commonTest/: ReaktorTest.kt
lib-network/: build.gradle.kts  lib_network.podspec
lib-ui/: build.gradle.kts  lib_ui.podspec  package.json
lib-worker/: README.md  build.gradle.kts  lib_worker.podspec  package.json
tester/android/: build.gradle.kts  google-services.json
tester/ios/: Podfile
tester/react/: index.js  metro.config.js  package.json  react-native.config.js  tsconfig.json
tester/server/: .gitignore  build.gradle.kts
tester/web/: build.gradle.kts  next.config.js  package.json
(+132 files in other folders)
